# NetworkOnChip

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.c5eeb16  Makefile  README.md  buble.asm  buble.data  cod.cpp  cod.h  decod.cpp  flit.cpp  flit.h  full_router.h  globals.h  inetworkinterfacefrontend.h  irouterchannel.h  main.cpp  master.h  networkinterface.cpp  networkinterface.h  networkinterfacebackend.cpp  networkinterfacebackend.h  networkinterfacefrontend.h  noc_common.h  router.cpp  router.h  routerchannel.cpp  routerchannel.h  shell_master_ni.h  shell_memoria.cpp  shell_mips.cpp  shell_mips.h  shell_mips_if.h  shell_slave_ni.h
OldNoCExample/: CMakeLists.txt  decod.h  kernel_ni.cpp  kernel_ni.h  main.cpp  mem_if.h  memdef.h  memoria.cpp  memoria.h  mips.cpp  mips.h  noc_common.h  router.h  shell_memoria.cpp  shell_mips.cpp  shell_mips.h  slave.h
doc/2016/: simpleNoC2015.docx
include/: inetworkinterfacefrontend.h  irouterchannel.h  nocassembler.h  noccommon.cpp  noccommon.h  nocdebug.h  nocrouting.h  specialkernel.cpp  specialkernel.h
ipcores/: NOC_MEM.cpp  NOC_MEM.h  NOC_MEM_SHELL.cpp  breg.cpp  breg.h  cache.cpp  decode.h  execute.h  fetch.h  main.cpp  mastershell.cpp  mem.h  mipsshell.cpp  mipsshell.h  nocdebug.h  pemaster.cpp  pemaster.h  pemastershell.cpp  pemastershell.h  peslave.cpp  peslave.h  peslaveshell.cpp  peslaveshell.h  top.h
ipcores/MIPS/: .cproject  .project  cache.h  inetworkinterfacefrontend.h  mem.cpp  mem.h  mipsshell.cpp  mipsshell.h  shared.h  top.h
ipcores/MIPS/Debug/: makefile
ipcores/nocmem/: NOC_MEM_SHELL.h
src/: flit.cpp  flit.h  main.cpp  networkinterface.cpp  networkinterface.h  networkinterfacefrontendbase.cpp  networkinterfacefrontendbase.h  nocassembler.cpp  nocassembler.h  nocrouting.cpp  nocrouting.h  pemaster.cpp  pemaster.h  pemastershell.cpp  pemastershell.h  penull.cpp  penull.h  penullshell.cpp  penullshell.h  peslave.cpp  peslave.h  peslaveshell.cpp  peslaveshell.h  router.cpp  router.h  routerchannel.cpp  routerchannel.h
test/: basicshellscommunication.cpp  channeltester.cpp  channeltester.h  master.cpp  master.h  mastershell.cpp  mastershell.h  networkinterfacetester.cpp  pemaster.cpp  pemaster.h  pemastershell.cpp  pemastershell.h  penull.cpp  penull.h  penullshell.cpp  penullshell.h  peslave.cpp  peslave.h  peslaveshell.cpp  peslaveshell.h  petestreceiver.cpp  petestreceiver.h  petestreceiverfrontend.cpp  petestreceiverfrontend.h  petestsender.cpp  petestsender.h  petestsenderfrontend.cpp  petestsenderfrontend.h  routerchanneltester.cpp  routertester.cpp  slave.cpp  slaveshell.cpp  slaveshell.h
